fixed more overflowed elements

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -3,6 +3,12 @@ div {
     border: 1px solid rgba(255, 0, 0, 1)
 }
 
+.arrow,
+a,
+.top {
+    cursor: pointer;
+}
+
 html {
     /* scroll-behavior: smooth; */
 }
@@ -34,11 +40,6 @@ html {
     }
 }
 
-.arrow,
-a {
-    cursor: pointer;
-}
-
 /* ff */
 .ff-img {
     filter: grayscale(100%);
@@ -46,10 +47,6 @@ a {
 }
 
 /* why bncc */
-.shadow-bsWhy {
-    width: 26rem;
-}
-
 .card-why {
     width: 20rem;
     height: 27rem;
@@ -127,6 +124,13 @@ a {
 .bot {
     display: none;
     border-radius: 0px 0px 24px 24px;
+}
+
+/* Bose */
+.bose .card {
+    width: 30rem;
+    height: min-content;
+    margin: 2rem 1rem;
 }
 
 /* Say */
@@ -252,10 +256,12 @@ a {
     }
 
     .about,
+    .vc,
     .ff,
     .why,
     .oc,
     .oe,
+    .bose,
     .what,
     .faq,
     .sponsor {
@@ -263,13 +269,19 @@ a {
     }
   }
 
-  @media all and (max-width: 1023px) {
+@media all and (max-width: 1023px) {
+
     .font-extrabold {
         font-size: 3rem;
     }
 
     #navbar {
         display: none;
+    }
+
+    /* vc */
+    .vc .video {
+        height: 24rem;
     }
 
     /* Our Courses */
@@ -281,7 +293,12 @@ a {
         padding: 0.5rem;
     }
 
-      /* Footer */
+        .oc .oc-tags {
+            width: 7rem;
+            margin: 0rem 0.2rem;
+        }
+
+        /* Footer */
     .footer-content {
         top: 10rem;
     }
@@ -298,142 +315,172 @@ a {
     }
 
 
-  }
+}
 
-  @media all and (max-width: 767px) {
-    .font-extrabold {
-        font-size: 2.2rem;
-    }
+@media all and (max-width: 767px) {
+.font-extrabold {
+    font-size: 2.2rem;
+}
 
-    .about,
-    .ff,
-    .why,
-    .oc,
-    .oe,
-    .what,
-    .faq,
-    .sponsor {
-        padding: 0rem 0rem;
-    }
-
-    .ocBigBox {
-        padding: 3rem 0rem;
-    }
-
-    .ocBigBox .ocCon .bg-cBabyBlue {
-        margin: 0rem 0.2rem;
-    }
+.about,
+.vc,
+.ff,
+.why,
+.oc,
+.oe,
+.bose,
+.what,
+.faq,
+.sponsor {
+    padding: 0rem 0rem;
+}
+/* vc */
+.vc .video {
+    height: 18rem;
+}
 
 
-    /* Footer */
-    .footer-sec .got-question{
-        width: 10rem;
-    }
+/* Our Courses */
+.ocBigBox {
+    padding: 3rem 0rem;
+}
 
-    .footer .socmed-cont {
-        padding: 0.5rem;
-    }
+.ocBigBox .ocCon .bg-cBabyBlue {
+    margin: 0rem 0.2rem;
+}
 
-    .footer .gotaq-cont {
-        padding: 0.5rem;
-        width: 4rem;
-    }
-  }
+.oc .oc-tags-cont {
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.oc .oc-tags {
+    width: 7rem;
+    margin: 0rem 1rem;
+}
 
-  @media all and (max-width: 479px) {
-    /* why */
-    .card-why {
-        width: 15rem;
-        height: 20rem;
-        margin: 0.8rem 0rem;
-        padding: 2rem 0rem;
-    }
+/* Bose */
+.bose .card {
+    width: 100%;
+}
 
-    /* oc */
-    .oc .ocBigBox {
-        min-height: 27rem;
-    }
-    .oc .ocCon {
-        padding: 1rem 0rem;
-    }
+/* Footer */
+.footer-sec .got-question{
+    width: 10rem;
+}
 
-    .oc .ocCon .text-3xl {
-        text-align: center;
-        font-size: 1.2rem;
-    }
+.footer .socmed-cont {
+    padding: 0.5rem;
+}
 
-    .oc .ocCon .px-16{
-        padding: 0rem 0.5rem;
-        font-size: 0.9rem;
-    }
+.footer .gotaq-cont {
+    padding: 0.5rem;
+    width: 4rem;
+}
+}
 
-    .oc .ocBigBox .w-36 {
-        width: max-content;
-        font-size: 0.8rem;
-        margin: 0rem 0.2rem;
-        padding: 0.2rem 0.4rem;
-    }
+@media all and (max-width: 479px) {
+/* vc */
+.vc .video {
+    height: 14rem;
+}
 
-    .oc .btnCont {
-        min-height: 4rem;
-    }
+/* why */
+.card-why {
+    max-width: 12rem;
+    height: 20rem;
+    margin: 0.8rem 0rem;
+    padding: 2rem 0rem;
+}
 
-    .oc .btnCont .ocBox {
-        padding: 0.5rem;
-    }
+/* oc */
+.oc .ocBigBox {
+    min-height: 27rem;
+}
+.oc .ocCon {
+    padding: 1rem 0rem;
+}
 
-    .oc .btnCont .ocBox .ocBtn{
-        width: 40px;
-    }
+.oc .ocCon .text-3xl {
+    text-align: center;
+    font-size: 1.2rem;
+}
 
-    .oc .oc-text {
-        padding: 1rem;
-        font-size: 0.8rem;
-    }
+.oc .ocCon .px-16{
+    padding: 0rem 0.5rem;
+    font-size: 0.9rem;
+}
 
+.oc .ocBigBox .w-36 {
+    width: max-content;
+    font-size: 0.8rem;
+    margin: 0rem 0.2rem;
+    padding: 0.2rem 0.4rem;
+}
 
-    /* ff */
-    .ff .boxCont .font-regular  {
-        font-size: 0.8rem;
-    }
-    .ff .shadow-bsFf {
-        padding: 0.5rem;
-        margin: 0rem 0.2rem 0rem 0rem;
-        width: 4rem;
-    }
+.oc .btnCont {
+    min-height: 4rem;
+}
 
-    .ff-img {
-        width: 4rem;
-    }
+.oc .btnCont .ocBox {
+    padding: 0.5rem;
+}
 
-    /* Say */
-    .say-card img{
-        width: 80px;
-        height: 80px;
-    }
-    .say-card .text-sm{
-        font-size: .7rem;
-        line-height: .9rem;
-    }
-    .say-btn{
-        font-size: .6rem;
-        font-weight: 600;
-    }
-    .say-btn img{
-        width: 30px;
-        height: 30px;
-    }
-    .say-card-cont{
-        height: 130px;
-    }
-    .say-card-cont .title{
-        font-size: .8rem;
-    }
-    .say-title{
-        /* font-size: 1.2rem; */
-    }
-    .text-base{
-        font-size: .8rem;
-        line-height: 1.2rem;
-    }
-  }
+.oc .btnCont .ocBox .ocBtn{
+    width: 40px;
+}
+
+.oc .oc-text {
+    padding: 1rem;
+    font-size: 0.8rem;
+}
+
+.bose .card {
+    width: 100%;
+    height: min-content;
+}
+
+/* ff */
+.ff .boxCont .font-regular  {
+    font-size: 0.8rem;
+}
+.ff .shadow-bsFf {
+    padding: 0.5rem;
+    margin: 0rem 0.2rem 0rem 0rem;
+    width: 4rem;
+}
+
+.ff-img {
+    width: 4rem;
+}
+
+/* Say */
+.say-card img{
+    width: 80px;
+    height: 80px;
+}
+.say-card .text-sm{
+    font-size: .7rem;
+    line-height: .9rem;
+}
+.say-btn{
+    font-size: .6rem;
+    font-weight: 600;
+}
+.say-btn img{
+    width: 30px;
+    height: 30px;
+}
+.say-card-cont{
+    height: 130px;
+}
+.say-card-cont .title{
+    font-size: .8rem;
+}
+.say-title{
+    /* font-size: 1.2rem; */
+}
+.text-base{
+    font-size: .8rem;
+    line-height: 1.2rem;
+}
+}
